🛋🌵 Checkpoint ./trivia.html:62897631/6:62897855/237

--- a/trivia.html
+++ b/trivia.html
@@ -1,2 +1,9 @@
-<head>
-  
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+     <meta name="geo" content="width=device-width, initial-scale=1" />
+    
+    <tittle> GEO TRIVIA </tittle>
+    
+  </head>
